--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <title>台灣夜市介紹</title>
+    <title>我的網頁</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,22 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+	
+	<style>
+	img {
+		 border-style: solid;
+		 border-width: 20px;
+		 padding: 20px;
+	}
+	body {
+		background-image : url("http://i.imgur.com/TTPdVSS.jpg");
+	}
+	h1{
+		color : green;
+		font-size : 100px;
+	}
+	
+	</style>
 </head>
 
 <body>
@@ -58,7 +73,7 @@
                 <div class="row">
                     <div class="col-lg-12">
 						<h1>你做的真爛</h1>
-                        <img src="http://i.imgur.com/iTsDppf.png" alt="picture">
+                        <img src="http://i.imgur.com/iTsDppf.png" alt="picture" border="5">
 						
 						<hr>
 						<iframe width="854" height="480" src="https://www.youtube.com/embed/YiiHfOAG2Hk" frameborder="0" allowfullscreen ></iframe>
